# Langchain-tutorial

./: pyproject.toml
Embedding models/: geminiembedding_models.py  query_similarity.py
chains/: README.md  chain.ipynb
chat_models/: anthropicchatmodel.py  geminichat2.py  geminichatmodel.py
chatprompttemplate/: README.md  chat_history.txt  chatproompt.py
chatwithbook/: Ask A Book Questions.ipynb
documents_loader/: README.md  cricket.txt  documentsloader.ipynb
image to text ocr/: deepseekocr.ipynb
memory in langchain/: README.md  memory.ipynb
models/: README.md
models/Embedding models/: README.md  huggingface_embedding.py  openai_embedding_documents.py  text_similarity_projects.py
models/chat_models/: README.md  openai.py
output parsers/: README.md  outputparsers.ipynb
projects/chatwithbook/: Ask A Book Questions.ipynb  RAG_2[1].ipynb  computer_graphics_notes.json
prompt template/: README.md  chatprompt_template.py  email_spam_classifier.py  movie_recommendation_system.py  prompt_template.py  simple_usser_prompt.py
pydantic/: README.md  pydanticuse.py
text_splitters/: README.md  semantic_meaning_based.py
tools in langchain/: README.md  tool.ipynb
