[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.2.1",
    "google-generativeai>=0.8.5",
    "grandalf>=0.8",
    "huggingface-hub>=0.20.0",
    "ipykernel>=7.0.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.35",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pdfminer>=20191125",
    "pypdf>=6.1.3",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "sentence-transformers==5.1.2",
    "torch>=2.0.0",
    "transformers>=4.41.0,<5.0.0",
    "unstructured>=0.18.15",
]
